--- a/404.html
+++ b/404.html
@@ -1,24 +1,8 @@
 ---
 layout: default
+title: Page not found
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<p class="app-body">If you typed the web address, check it is correct.</p>
+<p class="app-body">If you pasted the web address, check you copied the entire address.</p>
+<p class="app-body">If you were looking for something specific,you can contact us at <a href="mailto:info@higglety-pigglety.co.uk">info@higglety-pigglety.co.uk</a>.</p>
